--- a/config/config.yaml
+++ b/config/config.yaml
@@ -72,7 +72,7 @@ notification:
   #    - Severe: Webhook abuse leading to security incidents (malicious messages, phishing links, etc.)
   #
   webhooks:
-    feishu_url: "https://www.feishu.cn/flow/api/trigger-webhook/f198d4bb5140c91ee21ba4280ffb9521" # 飞书机器人的 webhook URL
+    feishu_url: "" # 飞书机器人的 webhook URL
     dingtalk_url: "" # 钉钉机器人的 webhook URL
     wework_url: "" # 企业微信机器人的 webhook URL
     wework_msg_type: "markdown" # 企业微信消息类型：markdown(群机器人) 或 text(个人微信应用)
